// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasePostCard Component should render correctly in the default view 1`] = `
<div
  className="postCard"
>
  <div
    onClick={[MockFunction]}
  >
    <img
      alt="post pic"
      src=""
    />
  </div>
  <div>
    <div>
      <p>
        a few seconds ago
      </p>
    </div>
    <div
      onClick={[MockFunction]}
    >
      <p>
        Donations
      </p>
    </div>
    <div
      onClick={[MockFunction]}
    >
      <h1>
        Post Title
      </h1>
    </div>
    <div>
      <p
        style={
          Object {
            "textTransform": "capitalize",
          }
        }
      >
        jijel
      </p>
    </div>
    <p>
      Here is some post description, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
    </p>
    <div>
      <div
        onClick={[Function]}
      >
        <div>
          <div>
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
            />
            <svg
              transform="scale(2, 1.8)"
              viewBox="467 392 58 57"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(467 392)"
              >
                <path
                  d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
                  fill="transparent"
                  stroke="#000000"
                  strokeWidth="1.8px"
                />
                <circle
                  cx="29.5"
                  cy="29.5"
                  fill="#D7443E"
                  opacity="0"
                  r="1.5"
                />
                <g
                  opacity="0"
                  transform="translate(7 6)"
                >
                  <circle
                    cx="2"
                    cy="6"
                    fill="#9CD8C3"
                    r="2"
                  />
                  <circle
                    cx="5"
                    cy="2"
                    fill="#8CE8C3"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(0 28)"
                >
                  <circle
                    cx="2"
                    cy="7"
                    fill="#CC8EF5"
                    r="2"
                  />
                  <circle
                    cx="3"
                    cy="2"
                    fill="#91D2FA"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(52 28)"
                >
                  <circle
                    cx="2"
                    cy="7"
                    fill="#9CD8C3"
                    r="2"
                  />
                  <circle
                    cx="4"
                    cy="2"
                    fill="#8CE8C3"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(44 6)"
                >
                  <circle
                    cx="5"
                    cy="6"
                    fill="#CC8EF5"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#CC8EF5"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(14 50)"
                >
                  <circle
                    cx="6"
                    cy="5"
                    fill="#91D2FA"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#91D2FA"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(35 50)"
                >
                  <circle
                    cx="6"
                    cy="5"
                    fill="#F48EA7"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#F48EA7"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(24)"
                >
                  <circle
                    cx="2.5"
                    cy="3"
                    fill="#9FC7FA"
                    r="2"
                  />
                  <circle
                    cx="7.5"
                    cy="2"
                    fill="#9FC7FA"
                    r="2"
                  />
                </g>
              </g>
            </svg>
          </div>
        </div>
        <p>
          3
        </p>
      </div>
      <div
        onClick={[MockFunction]}
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`BasePostCard Component should render correctly in the grid view 1`] = `
<div
  className="postCard gridView"
>
  <div
    onClick={[MockFunction]}
  >
    <img
      alt="post pic"
      src=""
    />
  </div>
  <div>
    <div>
      <p>
        a few seconds ago
      </p>
    </div>
    <div
      onClick={[MockFunction]}
    >
      <p>
        Donations
      </p>
    </div>
    <div
      onClick={[MockFunction]}
    >
      <h1>
        Post Title
      </h1>
    </div>
    <div>
      <p
        style={
          Object {
            "textTransform": "capitalize",
          }
        }
      >
        jijel
      </p>
    </div>
    <p>
      Here is some post description, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
    </p>
    <div>
      <div
        onClick={[Function]}
      >
        <div>
          <div>
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
            />
            <svg
              transform="scale(2, 1.8)"
              viewBox="467 392 58 57"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(467 392)"
              >
                <path
                  d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
                  fill="transparent"
                  stroke="#000000"
                  strokeWidth="1.8px"
                />
                <circle
                  cx="29.5"
                  cy="29.5"
                  fill="#D7443E"
                  opacity="0"
                  r="1.5"
                />
                <g
                  opacity="0"
                  transform="translate(7 6)"
                >
                  <circle
                    cx="2"
                    cy="6"
                    fill="#9CD8C3"
                    r="2"
                  />
                  <circle
                    cx="5"
                    cy="2"
                    fill="#8CE8C3"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(0 28)"
                >
                  <circle
                    cx="2"
                    cy="7"
                    fill="#CC8EF5"
                    r="2"
                  />
                  <circle
                    cx="3"
                    cy="2"
                    fill="#91D2FA"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(52 28)"
                >
                  <circle
                    cx="2"
                    cy="7"
                    fill="#9CD8C3"
                    r="2"
                  />
                  <circle
                    cx="4"
                    cy="2"
                    fill="#8CE8C3"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(44 6)"
                >
                  <circle
                    cx="5"
                    cy="6"
                    fill="#CC8EF5"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#CC8EF5"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(14 50)"
                >
                  <circle
                    cx="6"
                    cy="5"
                    fill="#91D2FA"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#91D2FA"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(35 50)"
                >
                  <circle
                    cx="6"
                    cy="5"
                    fill="#F48EA7"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#F48EA7"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(24)"
                >
                  <circle
                    cx="2.5"
                    cy="3"
                    fill="#9FC7FA"
                    r="2"
                  />
                  <circle
                    cx="7.5"
                    cy="2"
                    fill="#9FC7FA"
                    r="2"
                  />
                </g>
              </g>
            </svg>
          </div>
        </div>
        <p>
          3
        </p>
      </div>
      <div
        onClick={[MockFunction]}
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`BasePostCard Component should render correctly with the directionReversed 1`] = `
<div
  className="postCard directionReversed"
>
  <div
    onClick={[MockFunction]}
  >
    <img
      alt="post pic"
      src=""
    />
  </div>
  <div>
    <div>
      <p>
        a few seconds ago
      </p>
    </div>
    <div
      onClick={[MockFunction]}
    >
      <p>
        Donations
      </p>
    </div>
    <div
      onClick={[MockFunction]}
    >
      <h1>
        Post Title
      </h1>
    </div>
    <div>
      <p
        style={
          Object {
            "textTransform": "capitalize",
          }
        }
      >
        jijel
      </p>
    </div>
    <p>
      Here is some post description, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
    </p>
    <div>
      <div
        onClick={[Function]}
      >
        <div>
          <div>
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
            />
            <svg
              transform="scale(2, 1.8)"
              viewBox="467 392 58 57"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(467 392)"
              >
                <path
                  d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
                  fill="transparent"
                  stroke="#000000"
                  strokeWidth="1.8px"
                />
                <circle
                  cx="29.5"
                  cy="29.5"
                  fill="#D7443E"
                  opacity="0"
                  r="1.5"
                />
                <g
                  opacity="0"
                  transform="translate(7 6)"
                >
                  <circle
                    cx="2"
                    cy="6"
                    fill="#9CD8C3"
                    r="2"
                  />
                  <circle
                    cx="5"
                    cy="2"
                    fill="#8CE8C3"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(0 28)"
                >
                  <circle
                    cx="2"
                    cy="7"
                    fill="#CC8EF5"
                    r="2"
                  />
                  <circle
                    cx="3"
                    cy="2"
                    fill="#91D2FA"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(52 28)"
                >
                  <circle
                    cx="2"
                    cy="7"
                    fill="#9CD8C3"
                    r="2"
                  />
                  <circle
                    cx="4"
                    cy="2"
                    fill="#8CE8C3"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(44 6)"
                >
                  <circle
                    cx="5"
                    cy="6"
                    fill="#CC8EF5"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#CC8EF5"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(14 50)"
                >
                  <circle
                    cx="6"
                    cy="5"
                    fill="#91D2FA"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#91D2FA"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(35 50)"
                >
                  <circle
                    cx="6"
                    cy="5"
                    fill="#F48EA7"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#F48EA7"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(24)"
                >
                  <circle
                    cx="2.5"
                    cy="3"
                    fill="#9FC7FA"
                    r="2"
                  />
                  <circle
                    cx="7.5"
                    cy="2"
                    fill="#9FC7FA"
                    r="2"
                  />
                </g>
              </g>
            </svg>
          </div>
        </div>
        <p>
          3
        </p>
      </div>
      <div
        onClick={[MockFunction]}
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`BasePostCard Component should render correctly with the directionReversed and in grid view 1`] = `
<div
  className="postCard gridView directionReversed"
>
  <div
    onClick={[MockFunction]}
  >
    <img
      alt="post pic"
      src=""
    />
  </div>
  <div>
    <div>
      <p>
        a few seconds ago
      </p>
    </div>
    <div
      onClick={[MockFunction]}
    >
      <p>
        Donations
      </p>
    </div>
    <div
      onClick={[MockFunction]}
    >
      <h1>
        Post Title
      </h1>
    </div>
    <div>
      <p
        style={
          Object {
            "textTransform": "capitalize",
          }
        }
      >
        jijel
      </p>
    </div>
    <p>
      Here is some post description, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
    </p>
    <div>
      <div
        onClick={[Function]}
      >
        <div>
          <div>
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
            />
            <svg
              transform="scale(2, 1.8)"
              viewBox="467 392 58 57"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(467 392)"
              >
                <path
                  d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
                  fill="transparent"
                  stroke="#000000"
                  strokeWidth="1.8px"
                />
                <circle
                  cx="29.5"
                  cy="29.5"
                  fill="#D7443E"
                  opacity="0"
                  r="1.5"
                />
                <g
                  opacity="0"
                  transform="translate(7 6)"
                >
                  <circle
                    cx="2"
                    cy="6"
                    fill="#9CD8C3"
                    r="2"
                  />
                  <circle
                    cx="5"
                    cy="2"
                    fill="#8CE8C3"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(0 28)"
                >
                  <circle
                    cx="2"
                    cy="7"
                    fill="#CC8EF5"
                    r="2"
                  />
                  <circle
                    cx="3"
                    cy="2"
                    fill="#91D2FA"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(52 28)"
                >
                  <circle
                    cx="2"
                    cy="7"
                    fill="#9CD8C3"
                    r="2"
                  />
                  <circle
                    cx="4"
                    cy="2"
                    fill="#8CE8C3"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(44 6)"
                >
                  <circle
                    cx="5"
                    cy="6"
                    fill="#CC8EF5"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#CC8EF5"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(14 50)"
                >
                  <circle
                    cx="6"
                    cy="5"
                    fill="#91D2FA"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#91D2FA"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(35 50)"
                >
                  <circle
                    cx="6"
                    cy="5"
                    fill="#F48EA7"
                    r="2"
                  />
                  <circle
                    cx="2"
                    cy="2"
                    fill="#F48EA7"
                    r="2"
                  />
                </g>
                <g
                  opacity="0"
                  transform="translate(24)"
                >
                  <circle
                    cx="2.5"
                    cy="3"
                    fill="#9FC7FA"
                    r="2"
                  />
                  <circle
                    cx="7.5"
                    cy="2"
                    fill="#9FC7FA"
                    r="2"
                  />
                </g>
              </g>
            </svg>
          </div>
        </div>
        <p>
          3
        </p>
      </div>
      <div
        onClick={[MockFunction]}
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
